// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Props Matches snapshot with custom props 1`] = `
<div
  className="dropdown"
  onKeyDown={[Function]}
  style={
    Object {
      "height": null,
      "width": 400,
    }
  }
>
  <button
    ari-describedby={null}
    aria-label="React Simple Dropdown"
    aria-labelledby={null}
    className="dropdown-select custom-class"
    disabled={true}
    id="dropdown"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="displayed-value grey"
    >
      Custom Placeholder...
    </div>
    <div
      className="dropdown-arrow down"
    />
  </button>
  <ul
    className="dropdown-content dropdown-content-down"
    style={
      Object {
        "maxHeight": 150,
        "overflowY": "scroll",
      }
    }
  >
    <button
      aria-label="ariaLabel"
      className="className dropdown-option"
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
      title="title"
      type="button"
    >
      <i
        className="fab fa-js-square option-icon"
      />
      1
    </button>
    <button
      aria-label="ariaLabel"
      className="className dropdown-option"
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
      title="title"
      type="button"
    >
      <i
        className="fab fa-js-square option-icon"
      />
      2
    </button>
    <button
      aria-label="ariaLabel"
      className="className dropdown-option"
      key="3"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
      title="title"
      type="button"
    >
      <i
        className="fab fa-js-square option-icon"
      />
      3
    </button>
  </ul>
</div>
`;

exports[`Check Props Matches snapshot with default props 1`] = `
<div
  className="dropdown"
  onKeyDown={[Function]}
  style={
    Object {
      "height": null,
      "width": null,
    }
  }
>
  <button
    ari-describedby={null}
    aria-label={null}
    aria-labelledby={null}
    className="dropdown-select"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="displayed-value grey"
    >
      Select ...
    </div>
    <div
      className="dropdown-arrow down"
    />
  </button>
  <ul
    className="dropdown-content dropdown-content-down"
    style={Object {}}
  />
</div>
`;

exports[`Check Props Matches snapshot with grouped options 1`] = `
<div
  className="dropdown"
  onKeyDown={[Function]}
  style={
    Object {
      "height": null,
      "width": null,
    }
  }
>
  <button
    ari-describedby={null}
    aria-label={null}
    aria-labelledby={null}
    className="dropdown-select"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="displayed-value grey"
    >
      Select ...
    </div>
    <div
      className="dropdown-arrow down"
    />
  </button>
  <ul
    className="dropdown-content dropdown-content-down"
    style={Object {}}
  >
    <div
      className="dropdown-group"
      key="numbers"
    >
      <div
        className="dropdown-group-heading"
      >
        <div>
          NUMBERS
        </div>
        <div>
          10
        </div>
      </div>
      <button
        className="dropdown-option"
        key="1"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        1
      </button>
      <button
        className="dropdown-option"
        key="2"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        2
      </button>
      <button
        className="dropdown-option"
        key="3"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        3
      </button>
      <button
        className="dropdown-option"
        key="4"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        4
      </button>
      <button
        className="dropdown-option"
        key="5"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        5
      </button>
      <button
        className="dropdown-option"
        key="6"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        6
      </button>
      <button
        className="dropdown-option"
        key="7"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        7
      </button>
      <button
        className="dropdown-option"
        key="8"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        8
      </button>
      <button
        className="dropdown-option"
        key="9"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        9
      </button>
      <button
        className="dropdown-option"
        key="10"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        10
      </button>
    </div>
    <div
      className="dropdown-group"
      key="letters"
    >
      <div
        className="dropdown-group-heading"
      >
        <div>
          LETTERS
        </div>
        <div>
          10
        </div>
      </div>
      <button
        className="dropdown-option"
        key="a"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        a
      </button>
      <button
        className="dropdown-option"
        key="b"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        b
      </button>
      <button
        className="dropdown-option"
        key="c"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        c
      </button>
      <button
        className="dropdown-option"
        key="d"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        d
      </button>
      <button
        className="dropdown-option"
        key="e"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        e
      </button>
      <button
        className="dropdown-option"
        key="f"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        f
      </button>
      <button
        className="dropdown-option"
        key="g"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        g
      </button>
      <button
        className="dropdown-option"
        key="h"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        h
      </button>
      <button
        className="dropdown-option"
        key="i"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        i
      </button>
      <button
        className="dropdown-option"
        key="j"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        j
      </button>
    </div>
  </ul>
</div>
`;
